# catscan

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  Robyn-Summary.md  deploy.sh  docker-compose.simple.yml  docker-compose.yml  pretargeting.md  rtb-market-research-report.md  run.sh  setup.sh  tree.md
cat-scan/: Cargo.toml  docker-compose.yml
cat-scan/cat_scan/: Cargo.toml  Dockerfile
cat-scan/fake_bidder/: Cargo.toml  DEPLOY.md  Dockerfile  buildspec.yml  deploy.sh  task-definition.json
cat-scan/fake_ssp/: Cargo.toml  Dockerfile
cat-scan/fake_ssp/src/: main.rs
creative-intelligence/: Dockerfile  catscan-api.service  requirements.txt
creative-intelligence/analysis/: __init__.py  evaluation_engine.py
creative-intelligence/analytics/: __init__.py  config_analyzer.py  creative_analyzer.py  fraud_analyzer.py  geo_analyzer.py  geo_waste_analyzer.py  mock_traffic.py  pretargeting_recommender.py  qps_optimizer.py  recommendation_engine.py  rtb_funnel_analyzer.py  size_analyzer.py  (+3 more)
dashboard/: next.config.ts  package-lock.json  package.json
docs/: CAT_SCAN_README.md  CLAUDE_CLI_QPS_CleanSlate_Unified.md  CLAUDE_CLI_QPS_Waste_Analyzer.md  CLAUDE_CLI_RTB_API_Setup_and_Documentation.md  CatScan_Handover_v11.md  CatScan_Handover_v21.md  HANDOVER.md  Issues with Cards modals.txt  Phase26_Upload_Tracking_Features.md  Phase40_Schema_Refactoring.md  RTB_FRAUD_SIGNALS_REFERENCE.md  RTBcat_Handover_v9.md  RTBcat_QPS_Optimization_Strategy.md  SETUP_GUIDE.md  index.html  report.html
terraform/: DEPLOYMENT_ISSUES.md  main.tf  outputs.tf  user_data.sh  variables.tf
(+241 files in other folders)
