[package]
name = "fake_ssp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }

# IMPORTANT: disable default-features so it doesn't pull in OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# AWS SDK for S3 support
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.64"
